fix: Fix search z-index bug

--- a/static/css/pages/images.css
+++ b/static/css/pages/images.css
@@ -145,6 +145,7 @@
 .search-form {
   display: flex;
   gap: 2rem;
+  z-index: 5;
 }
 
 .search-input {
